<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="45dp"
        android:layout_marginTop="150dp"
        tools:ignore="UselessParent">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="first_name"
            android:hint="@string/first_name"
            android:layout_margin="10dp"
            android:inputType="text">
        </EditText>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="first_name"
            android:hint="@string/last_name"
            android:layout_margin="10dp"
            android:inputType="text">
        </EditText>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="first_name"
            android:hint="@string/email"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress">
        </EditText>

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="first_name"
            android:hint="@string/password"
            android:layout_margin="10dp"
            android:inputType="textPassword">
        </EditText>

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/update_profile"
            android:textColorHint="@color/white"
            android:layout_margin="10dp"
            android:background="@drawable/custom_button">
        </Button>






    </LinearLayout>


</RelativeLayout>