<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CICTFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp">


        <ImageView
            android:layout_width="390dp"
            android:layout_height="150dp"
            android:background="@drawable/custom_img"
            android:clipToOutline="true"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/cict"
            tools:targetApi="s">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cict_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingStart="60dp"
            android:paddingBottom="10dp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obj"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>




</RelativeLayout>